--- a/.pylintrc
+++ b/.pylintrc
@@ -25,10 +25,7 @@ load-plugins=pinax.checkers.style
 # Seems to be broken?
 #   E1102 = Not Callable
 
-# Broken with Django
-#   E1101 = Instance X has not member Y. (This breaks with Django)
-disable=W0511,I0011,C0111,R0913,R0903,R0904,R0911,R0912,R0914,R0201,W0142,E0603,E1101,W0403,W0613,W0232,E1120
-#disable=W0212,R0903,R0904,W0614,C0111,I0011,E1102,R0901,E1101,W0201,R0801
+disable=C0111,W0511,E1101,R0904
 
 [REPORTS]
 include-ids=yes
@@ -57,7 +54,7 @@ max-line-length=80
 dummy-variables-rgx=^.*_$
 
 [TYPECHECK]
-generated-members=DoesNotExist,MultipleObjectsReturned,objects,status_code,context,is_valid,cleaned_data,errors
+# generated-members=DoesNotExist,MultipleObjectsReturned,objects,status_code,context,is_valid,cleaned_data,errors
 
 [MISCELLANEOUS]
 notes=FIXME,XXX,TODO,@@@
