--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,12 @@ install:
   - pip install -q mock --use-mirrors
   - pip install -q pylint --use-mirrors
   - pip install -q nose --use-mirrors
+  - pip install -q coverage --use-mirrors
+  - pip install -q python-coveralls --use-mirrors
   - pip install -e . --use-mirrors
 before_script:
   - "pylint --rcfile=.pylintrc pinax"
 script:
-  - nosetests
+  - nosetests --with-coverage
+after_script:
+  - coveralls
